# ccwaste

./: Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: inject.rs  json_report.rs  main.rs  parser.rs  report.rs  scanner.rs  types.rs
src/analyzers/: broad_searches.rs  claudemd_bloat.rs  context_accumulation.rs  file_rereads.rs  killed_subagents.rs  metadata_bloat.rs  missing_claudeignore.rs  mod.rs  model_overkill.rs  repeated_toolsearch.rs  review_cycles.rs  self_inflicted_diffs.rs  tool_errors.rs
tests/fixtures/: minimal.jsonl  with_errors.jsonl  with_metadata.jsonl  with_rereads.jsonl
