[package]
name = "ccwaste"
version = "0.1.0"
edition = "2021"
description = "Claude Code conversation waste analyzer"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "3"
dirs = "6"
